deploy/k8s/catbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catbox-clone
  namespace: default
  labels:
    app: catbox-clone
spec:
  selector:
    app: catbox-clone
  ports:
    - name: http
      port: 80
      targetPort: 8080
