deploy/k8s/catbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catbox-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catbox-clone
            port:
              number: 80
